--- a/src/app/usit/components/reports/Executive-Rating/add-executive-rating/add-executive-rating.component.html
+++ b/src/app/usit/components/reports/Executive-Rating/add-executive-rating/add-executive-rating.component.html
@@ -1,116 +1,124 @@
 <div class="header-container mat-elevation-z1">
-    <span class="header-text" mat-dialog-title>
-      {{data.title}}
-    </span>
-    <button mat-icon-button (click)="onCancel()">
-      <mat-icon>close</mat-icon>
-    </button>
-  </div>
-  <mat-card class="center-card">
-    <form [formGroup]="ratingForm" class="vendor-form">
-      <div class="form">
-        <!-- Left Column (3 Fields) -->
-        <div class="form-column-left">
-          <div class="fg-div">
-            <div class="fg-div" *ngIf="!hideTeamLeadField">
-              <mat-form-field appearance="fill">
-                <mat-label>Select TeamLead</mat-label>
-                <input 
-                  matInput 
-                  formControlName="teamLead"  
-                  [matAutocomplete]="managerAutoCmp"
-                  [value]="getPseudoName(ratingForm.value.teamLead, managerList)"
-                >
-                <mat-autocomplete #managerAutoCmp="matAutocomplete" 
-                                  [displayWith]="displayTeamleadName" 
-                                  (optionSelected)="onTeamLeadSelected($event.option.value)">
-                  <mat-option *ngFor="let option of (searchTeamLeadOptions$ | async)" 
-                              [value]="option.id">
-                    {{ option.pseudoName }}
-                  </mat-option>
-                </mat-autocomplete>
-                <mat-error *ngIf="ratingForm.get('teamLead')?.hasError('required')">
-                  TeamLead selection is required
-                </mat-error>
-              </mat-form-field>
-            </div>
-            
-            
-            
-            
-          </div>
-          <div class="fg-div">
+  <span class="header-text" mat-dialog-title>
+    {{data.title}}
+  </span>
+  <button mat-icon-button (click)="onCancel()">
+    <mat-icon>close</mat-icon>
+  </button>
+</div>
+<mat-card class="center-card">
+  <form [formGroup]="ratingForm" class="vendor-form">
+    <div class="form">
+      <!-- Left Column (3 Fields) -->
+      <div class="form-column-left">
+        <div class="fg-div">
+          <div class="fg-div" *ngIf="!hideTeamLeadField">
             <mat-form-field appearance="fill">
-              <mat-label>Select Executive</mat-label>
-              <input 
-                matInput 
-                formControlName="ratedTo"
-                [matAutocomplete]="executiveAutoCmp"
-                [disabled]="!!ratingForm.get('ratedTo')?.disabled"
-                
-                >
-                
-              <mat-autocomplete #executiveAutoCmp="matAutocomplete" 
-                                [displayWith]="displayExecutiveName" 
-                                (optionSelected)="onExecutiveSelected($event.option.value)">
-                <mat-option *ngFor="let option of (searchExecutiveOptions$ | async)" 
-                            [value]="option.id">
+              <mat-label>Select TeamLead</mat-label>
+              <input matInput formControlName="teamLead" [matAutocomplete]="managerAutoCmp"
+                [value]="getPseudoName(ratingForm.value.teamLead, managerList)">
+              <mat-autocomplete #managerAutoCmp="matAutocomplete" [displayWith]="displayTeamleadName"
+                (optionSelected)="onTeamLeadSelected($event.option.value)">
+                <mat-option *ngFor="let option of (searchTeamLeadOptions$ | async)" [value]="option.id">
                   {{ option.pseudoName }}
                 </mat-option>
               </mat-autocomplete>
-            
-              <mat-error *ngIf="ratingForm.get('ratedTo')?.hasError('required')">
-                Executive selection is required
+              <mat-error *ngIf="ratingForm.get('teamLead')?.hasError('required')">
+                TeamLead selection is required
               </mat-error>
-            </mat-form-field>
-            
-          </div>
-          <div class="fg-div">
-            <mat-form-field appearance="fill">
-              <mat-label>Report Type</mat-label>
-              <input 
-                matInput 
-                formControlName="ratingType"
-                [matAutocomplete]="reportTypeAutoCmp"
-              >
-              <mat-autocomplete #reportTypeAutoCmp="matAutocomplete" 
-                                (optionSelected)="onReportTypeSelected($event.option.value)">
-                <mat-option *ngFor="let option of reportTypes" [value]="option">
-                  {{ option }}
-                </mat-option>
-              </mat-autocomplete>
-              <mat-error *ngIf="ratingForm.get('ratingType')?.hasError('required')">
-                Report Type is required
+              <mat-error *ngIf="ratingForm.get('teamLead')?.hasError('invalidSelection')">
+                Please select a TeamLead from the list
               </mat-error>
             </mat-form-field>
           </div>
 
-        </div>
-  
-        <!-- Right Column (2 Fields) -->
-        <div class="form-column-right">
-          <mat-form-field appearance="fill">
-            <mat-label>Rating</mat-label>
-            <input matInput formControlName="rating">
-            <mat-error *ngIf="ratingForm.get('rating')?.hasError('required')">
-              Rating is required
-            </mat-error>
-          </mat-form-field>
-  
-          <mat-form-field appearance="fill">
-            <mat-label>Feedback</mat-label>
-            <input matInput formControlName="feedBack">
-            <mat-error *ngIf="ratingForm.get('feedBack')?.hasError('required')">
-              Feedback are required
-            </mat-error>
-          </mat-form-field>
-        </div>
-      </div>
-    </form>
-    <div class="form-button-right">
-        <button mat-raised-button color="white" (click)="onCancel()">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="isFormSubmitted" (click)="onSubmit()">Submit</button>
-      </div>
-  </mat-card>
-  
 
+
+
+        </div>
+
+        <div class="fg-div">
+          <mat-form-field appearance="fill">
+            <mat-label>Select Executive</mat-label>
+            <input matInput formControlName="ratedTo" [matAutocomplete]="executiveAutoCmp"
+              [disabled]="!!ratingForm.get('ratedTo')?.disabled">
+
+            <mat-autocomplete #executiveAutoCmp="matAutocomplete" [displayWith]="displayExecutiveName"
+              (optionSelected)="onExecutiveSelected($event.option.value)">
+
+              <mat-option *ngFor="let option of (searchExecutiveOptions$ | async)" [value]="option.id">
+                {{ option.pseudoName }}
+              </mat-option>
+
+            </mat-autocomplete>
+
+            <mat-error *ngIf="ratingForm.get('ratedTo')?.hasError('required')">
+              Executive selection is required
+            </mat-error>
+            <mat-error *ngIf="ratingForm.get('ratedTo')?.hasError('invalidSelection')">
+              Please select an executive from the list.
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <div class="fg-div">
+          <mat-form-field appearance="fill">
+            <mat-label>Report Type</mat-label>
+            <input matInput formControlName="ratingType" [matAutocomplete]="reportTypeAutoCmp">
+            <mat-autocomplete #reportTypeAutoCmp="matAutocomplete"
+              (optionSelected)="onReportTypeSelected($event.option.value)">
+              <mat-option *ngFor="let option of reportTypes" [value]="option">
+                {{ option }}
+              </mat-option>
+            </mat-autocomplete>
+            <mat-error *ngIf="ratingForm.get('ratingType')?.hasError('required')">
+              Report Type is required
+            </mat-error>
+            <mat-error *ngIf="ratingForm.get('ratingType')?.hasError('invalidSelection')">
+              Please select a valid Report Type (WEEKLY, MONTHLY, DAILY).
+            </mat-error>
+
+          </mat-form-field>
+        </div>
+
+      </div>
+
+      <!-- Right Column (2 Fields) -->
+      <div class="form-column-right">
+        <mat-form-field appearance="fill">
+          <mat-label>Rating</mat-label>
+          <input matInput formControlName="rating" type="number" min="0" max="5">
+          
+          <mat-error *ngIf="ratingForm.get('rating')?.hasError('required')">
+            Rating is required
+          </mat-error>
+          <mat-error *ngIf="ratingForm.get('rating')?.hasError('min')">
+            Rating must be at least 0
+          </mat-error>
+          <mat-error *ngIf="ratingForm.get('rating')?.hasError('max')">
+            Rating cannot be more than 5
+          </mat-error>
+        </mat-form-field>
+        
+        <mat-form-field appearance="fill">
+          <mat-label>Feedback</mat-label>
+          <input matInput formControlName="feedBack">
+          <mat-error *ngIf="ratingForm.get('feedBack')?.hasError('required')">
+            Feedback is required
+          </mat-error>
+          <mat-error *ngIf="ratingForm.get('feedBack')?.hasError('maxlength')">
+            Feedback cannot exceed 500 characters
+          </mat-error>
+          <mat-error *ngIf="ratingForm.get('feedBack')?.hasError('whitespace')">
+            Feedback cannot be empty or only whitespace
+          </mat-error>
+
+        </mat-form-field>
+      </div>
+    </div>
+  </form>
+  <div class="form-button-right">
+    <button mat-raised-button color="white" (click)="onCancel()">Cancel</button>
+    <button mat-raised-button color="primary" [disabled]="isFormSubmitted" (click)="onSubmit()">Submit</button>
+  </div>
+</mat-card>
