--- a/src/app/usit/components/reports/employee-reports/employee-reports.component.html
+++ b/src/app/usit/components/reports/employee-reports/employee-reports.component.html
@@ -22,7 +22,9 @@
           <input matInput [matDatepicker]="picker2" formControlName="endDate" />
           <mat-hint>MM/DD/YYYY</mat-hint>
           <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
-          <mat-datepicker #picker2 color="primary"></mat-datepicker> </mat-form-field>&nbsp;&nbsp;
+          <mat-datepicker #picker2 color="primary"></mat-datepicker>
+         </mat-form-field>
+         &nbsp;&nbsp;
 
 
         <mat-form-field>
