--- a/src/app/usit/components/openreqs/openreqs.component.scss
+++ b/src/app/usit/components/openreqs/openreqs.component.scss
@@ -279,3 +279,61 @@ ul.breadcrumb li:last-child {
 .bold-text {
   font-weight: bold;
 }
+.btnstyle{
+  background-color: #008000;
+}
+.resumeuploader{
+  margin: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+button{
+  margin: 10px;
+}
+.submitbutton{
+  position: absolute !important;
+  top: 50% !important;
+  height: 48px !important;
+  left: 0 !important;
+  right: 0 !important;
+  transform: translateY(-50%) !important;
+  background-color: #008000 !important;
+}
+.file-preview {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background: #B9F5D2; /* Requested background color */
+  padding: 10px 15px;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: bold; /* Highlight text */
+  width: 16%;
+  margin: 12px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Soft shadow */
+  color: #333; /* Text color for contrast */
+  border: 1px solid #83E2B2; /* Slight border for better visibility */
+}
+
+.cancel-btn {
+  background: transparent;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  color: red;
+  transition: 0.3s ease;
+}
+
+.cancel-btn:hover {
+  color: darkred;
+}
+.percentage-input{
+  margin: 6px !important;
+margin-bottom: 0px !important;
+}
+
+.submit-btn {
+  background-color: green !important;
+  color: white !important;
+}
