--- a/src/app/usit/components/technology-tag-list/skills-report/skills-report.component.scss
+++ b/src/app/usit/components/technology-tag-list/skills-report/skills-report.component.scss
@@ -28,4 +28,14 @@
     justify-content: flex-end;
     gap: 16px;
   }
+  .custom-hint {
+    background-color: #f5f5f5; /* light gray background */
+    padding: 8px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+    color: #f44336e3; /* dark gray text color */
+    font-size: 0.875rem;
+    margin-top: 4px;
+    margin-bottom: 18px;
+  }
   
