--- a/src/app/usit/components/openreqs/openreqs.component.scss
+++ b/src/app/usit/components/openreqs/openreqs.component.scss
@@ -337,3 +337,7 @@ margin-bottom: 0px !important;
   background-color: green !important;
   color: white !important;
 }
+.mdc-data-table__cell, .mdc-data-table__header-cell {
+  padding: 0 4px 0 4px;
+  border-right: 1px solid lightgray !important;
+}
