--- a/src/app/usit/components/recruitment/assigned-count/assigned-count.component.html
+++ b/src/app/usit/components/recruitment/assigned-count/assigned-count.component.html
@@ -1,12 +1,22 @@
 <div class="submission-container">
-    <div class="header-container mat-elevation-z1">
+    <div class="header-container mat-elevation-z1" style="display: flex; align-items: center; justify-content: space-between;padding: 6px;">
         <span class="header-text">
-            Assigned Requirements Report
-        </span>
-        <button mat-icon-button (click)="onCancel()">
-            <mat-icon>close</mat-icon>
+            <mat-icon 
+              style="vertical-align: middle; cursor: pointer; font-size: 24px; color: #3F51B5;" 
+              (click)="goback()">arrow_back
+            </mat-icon>
+            Requirement Count Report - 
+            <span class="pseudo-name">{{ pseudoname }}</span>
+          </span>
+          
+        <div class="header-actions" style="display: flex; align-items: center;">
+          <button class="search" mat-raised-button color="primary" style="margin-bottom: 9px;margin: 3px;"  *ngIf="privilegeServ.hasPrivilege('ASSIGNED_REQ_POPUP')" (click)="exportExcel()">
+            Excel Import
           </button>
-     </div>
+ 
+        </div>
+      </div>
+      
      <div id="table-container" class="table-wrapper">
         <section class="mat-elevation-z8 interview-table-style">
             <table mat-table [dataSource]="dataSource" oncopy="return false">
@@ -18,7 +28,7 @@
                 <ng-container matColumnDef="RequirementNumber">
                     <th mat-header-cell *matHeaderCellDef >
                         Requirement Number</th>
-                    <td mat-cell *matCellDef="let element"> {{ element?.reqnumber }} </td>
+                    <td mat-cell *matCellDef="let element" (click)="submissionreport(element)" class="requirementcount"> {{ element?.reqnumber }} </td>
                 </ng-container>
                 <ng-container matColumnDef="EmployeeType">
                     <th mat-header-cell *matHeaderCellDef> Employee Type </th>
