--- a/src/app/usit/components/openreqs/resume-uploader/resume-uploader.component.html
+++ b/src/app/usit/components/openreqs/resume-uploader/resume-uploader.component.html
@@ -68,7 +68,7 @@
                         style="width: 20%">
                         Title </th>
                     <td mat-cell *matCellDef="let element" style="width: 20%"><span class="consultant-name"><a
-                                href="{{element?.job_source}}" target="_blank"
+                                href="{{element?.job_source}}" target="_blank" (click)="empTag(element.id)"
                                 >{{element?.job_title | titlecase}}</a>
                         </span> </td>
                 </ng-container>
@@ -97,7 +97,7 @@
                 <ng-container matColumnDef="vendor">
                     <th mat-header-cell *matHeaderCellDef style="width: 12%">
                         Vendor</th>
-                        <td mat-cell *matCellDef="let element" class="req-info"  style="width: 12%"> {{element?.vendor | titlecase}}
+                        <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)" style="width: 12%"> {{element?.vendor | titlecase}}
                         </td>
                 </ng-container>
 
